force-app/main/default/objects/OrderItem/fields/Is_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Memo</label>
    <type>Checkbox</type>
</CustomField>