force-app/main/default/objects/OrderItem/fields/Quickbooks_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>