force-app/main/default/objects/OrderItem/fields/True_If_CreditMemo__c.field-meta.xml
<CustomField>
    <fullName>True_If_CreditMemo__c</fullName>
    <formula>IF(CONTAINS(PricebookEntry.Product2.ProductCode, $Setup.Registry__c.Memo_Product_Code__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>True If CreditMemo</label>
    <type>Checkbox</type>
</CustomField>